--- a/stijl.css
+++ b/stijl.css
@@ -2,4 +2,8 @@ body{
     details{
         background-color: #98FF98;
     }
+
+    h1{
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
 }
