--- a/stijl.css
+++ b/stijl.css
@@ -38,6 +38,7 @@ h2{
 article{
     grid-column-start: 2;
     margin: 1em;
+    display: grid;
 }
 
 details{
@@ -54,10 +55,18 @@ h3{
     font-size: 2.5em;
 }
 
+img{
+    width: 6em;
+}
+
 p{
     font-size: 2em;
 }
 
 h4{
+    font-size: 2.5em;
+}
+
+h5{
     font-size: 2.5em;
 }
